--- a/index.html
+++ b/index.html
@@ -3,11 +3,92 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="E-commerce Website for practise on React.js, Typescript, Sass, Stripe Payments"
+    />
+    <meta name="author" content="Ahmed Tarek" />
+    <meta
+      name="keywords"
+      content="Ahmed Tarek, E-commerce, React E-commerce, Typescript E-commerce, E-commerce with Dashboard"
+    />
+
+    <!-- goolge fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
+
+    <!-- google search console verification -->
+    <meta
+      name="google-site-verification"
+      content="TxaNQzv_zf-lkKSrTVB_DCTbasNZfpfvlbZf3adHlcc"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://ahmed-e-commerce.netlify.app" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="E-commerce website with Dashboard, made with React.js and Typescript"
+    />
+    <meta
+      property="og:description"
+      content="E-commerce website with dashboard made with React.js, Typescript, Redux Toolkit and React Query"
+    />
+    <meta
+      property="og:image"
+      content="https://ahmed-e-commerce.netlify.app/og_img.jpg"
+    />
+    <meta
+      property="og:site_name"
+      content="E-commerce website with React.js and Typescript"
+    />
+    <meta name="og:image:alt" content="E-commerce website Image" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="ahmed-e-commerce.netlify.app" />
+    <meta
+      property="twitter:url"
+      content="https://ahmed-e-commerce.netlify.app"
+    />
+    <meta
+      name="twitter:title"
+      content="E-commerce website with React.js and Typescript"
+    />
+    <meta
+      property="twitter:description"
+      content="E-commerce website made with React.js, Typescript, Redux Toolkit and React Query"
+    />
+    <meta
+      name="twitter:image"
+      content="https://ahmed-e-commerce.netlify.app/og_img.jpg"
+    />
+    <meta name="twitter:image:alt" content="E-commerce website Image" />
+
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon" />
     <title>E-commerce Shop</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script nomodule>
+      document.write(
+        "<h1 style='font-family:Arial; line-height: 50px; text-align:center; width:100%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)'>Sorry, you need to upgrade your web browser or use another one. <br /> عذراً، عليك القيام بتحديث متصفحك لأخر إصدار او استخدام متصفح اخر</h1>"
+      );
+    </script>
   </body>
 </html>
